--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,16 +80,30 @@ jobs:
     name: manylinux2010_x86_64 (all versions)
     runs-on: ubuntu-latest
     needs: [build-src]
+    strategy:      
+      matrix:
+        platform:
+          - manylinux2010_x86_64
+          - manylinux2014_aarch64
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build wheel for manylinux2010_x86_64
+        if: matrix.platform == 'manylinux2010_x86_64'
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
         with:
           python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'pybison>=0.2.8 six>=1.10.0 watchdog tqdm tornado livereload'
           system-packages: 'atlas-devel flex'
           pre-build-command: 'sh .github/workflows/pre-build-script-manylinux.sh'
+      - name: Build wheel for manylinux2014_aarch64
+        if: matrix.platform == 'manylinux2014_aarch64'
+        uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
+        with:
+          python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39'
+          build-requirements: 'pybison>=0.2.8 six>=1.10.0 watchdog tqdm tornado livereload'
+          system-packages: 'atlas-devel flex'
+          pre-build-command: 'sh .github/workflows/pre-build-script-manylinux.sh'          
       - name: List builds
         run: ls -la ./dist/
       - name: Store ${{ matrix.pep-425-tag }} wheel
