--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         password: ${{ secrets.PYPI_PASSWORD }}
 
   build-manylinux:
-    name: manylinux2010_x86_64 (all versions)
+    name: ${{ matrix.platform }} (all versions)
     runs-on: ubuntu-latest
     needs: [build-src]
     strategy:      
@@ -88,6 +88,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Set up QEMU
+        if: matrix.platform == 'manylinux2014_aarch64'
+        uses: docker/setup-qemu-action@v1        
       - name: Build wheel for manylinux2010_x86_64
         if: matrix.platform == 'manylinux2010_x86_64'
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2010_x86_64
