--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,8 @@ jobs:
     name: ${{ matrix.platform }} (all versions)
     runs-on: ubuntu-latest
     needs: [build-src]
-    strategy:      
+    strategy:
+      fail-fast: false
       matrix:
         platform:
           - manylinux2010_x86_64
